# plover-wpm-plugin-5

./: .gitignore  CLAUDE.md  DEBUGGING.md  INSTALLATION.md  README.md  build_ui.bat  plover_debug_output.txt  pyproject.toml  pyuic.json  requirements-dev.txt  setup.cfg
.claude/: settings.local.json
plover_wpm_meter/: __init__.py
plover_wpm_meter_5/: __init__.py  resources_rc.py  strokes_meter_ui.py  wpm_meter_ui.py
