[metadata]
name = plover_wpm_meter_5
version = 0.3.0
description = A meter to show your typing speed in Plover (Plover 5.0 compatible)
long_description = file: README.md
long_description_content_type = text/markdown
author = Waleed Khan
author_email = me@waleedkhan.name
license = GNU General Public License v3 (GPLv3)
url = https://github.com/bioluminesceme/plover-wpm-plugin-5
classifiers =
	Development Status :: 4 - Beta
	Environment :: Plugins
	Intended Audience :: End Users/Desktop
	License :: OSI Approved :: GNU General Public License v3 (GPLv3)
	Operating System :: OS Independent
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.9
	Programming Language :: Python :: 3.10
	Programming Language :: Python :: 3.11
	Programming Language :: Python :: 3.12
keywords = plover plover_plugin

[options]
zip_safe = True
install_requires =
        # textstat > 0.3.1 contains a non-ASCII dash in the README, which is
        # opened in `setup.py`, which fails to be decoded on some platforms.
	textstat==0.3.1
packages =
	plover_wpm_meter_5

[options.entry_points]
plover.gui.qt.tool =
	wpm_meter = plover_wpm_meter_5:PloverWpmMeter
	strokes_meter = plover_wpm_meter_5:PloverStrokesMeter

# vim: commentstring=#\ %s list
